----------------------------------------------------------------------------------------------------------------------
Version 0.7.2
Date: soon
    Features:
        - Add several right-click and keyboard shortcuts, notably Enter/Return to close most dialogs.
        - Add UI rebuilding itself on resize.
        - When opening the main window, use the same size it was when it was last closed.
    Bugfixes:
        - Fix that some pages couldn't be deleted.
        - Fix that returning to the Welcome Screen could break the panels in the main window.
        - Make horizontal scrollbar clickable/draggable.
        - Scroll down/up exactly one page with page down/up keys
        - Fix saving and loading errors with legacy production summaries.
    Internal changes:
        - Initial window size is now separate from the minimal window size.
----------------------------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: June 12th 2024
    Features:
        - Allow configuring the size of icons that have backgrounds, since the icon may cover the entire
          background area.
        - Update the detection of special recipes and items, to detect stacking from Deadlock's Beltboxes, caging
          from Pyanodon, and pressurization from Pressurized Fluids.
          Also detect cases where one direction is required, (e.g. Some Nullius science packs are manufactured in
          stacks) and do not consider the required recipe special. (The unstacking recipe, in this case)
          As before, special items/recipes are shown at the end of lists and are not selected when ctrl-clicking.
    Bugfixes:
        - Display spent fuel items in the production table and link summaries.
        - Fix error when switching items in NEIE with middle-click
        - Fix missing window contents on Linux/Xorg.
        - Fix an exception when hovering over recipes in certain pathological cases.
    Internal changes: